# nl2sql

./: .gitignore  README.md  pyproject.toml
src/nl2sql/tools/: database.py  text2sql.py
src/nl2sql/tools/database/: data.py  metadata.py  vector.py
src/nl2sql/tools/resources/prompts/text2sql/: context.md  text2sql_agent.md  text2sql_assembly.md
src/nl2sql/tools/text2sql/: __init__.py  agent.py  assembly.py  base.py  oneshot.py
src/nl2sql/utils/: ai.py
tests/: config.py  fmt.py  test_entrypoint.py  text2sql.py  timeout.py
